Backendwithsf/force-app/main/default/objects/DMart_Order__c/DMart_Order__c.object-meta.xml
<CustomObject>
    <label>DMart Order</label>
    <nameField>
        <displayFormat>ORD-{000000}</displayFormat>
        <label>DMart Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DMart Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>