Backendwithsf/force-app/main/default/objects/DMart_Order__c/fields/Dmart_User__c.field-meta.xml
<CustomField>
    <fullName>Dmart_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dmart User</label>
    <referenceTo>Dmart_User__c</referenceTo>
    <relationshipLabel>DMart Orders</relationshipLabel>
    <relationshipName>DMart_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>