Backendwithsf/force-app/main/default/objects/DMart_Order__c/fields/order_Id__c.field-meta.xml
<CustomField>
    <fullName>order_Id__c</fullName>
    <displayFormat>ORD-{0000}</displayFormat>
    <label>order Id</label>
    <type>AutoNumber</type>
</CustomField>