Backendwithsf/force-app/main/default/objects/DMart_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dmart_User__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>